<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScreenLocker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">Register Yourself</string>
    <string name="title">Account Title</string>
    <string name="pass">Enter Password</string>
    <string name="conf">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="add">Add Account</string>
    <string name="about">About Us</string>
    <string name="change">Change Password</string>
    <string name="edit">Edit Details</string>
    <string name="Welcome">Enter Your Saved Details </string>
    <string name="name">Name</string>
    <string name="pwd">Password</string>
    <string name="sub">Submit</string>
    <string name="view">View Account</string>
    <string name="username">User Name</string>

</resources>
